# nets.c

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  test.sh
src/: libnets.c  libnets.h  nets.c  nets.h  test.c
